# tiago_sim_hospital

./: CMakeLists.txt  README.md  Tiago.perspective  package.xml  tiago_sim_hospital_packages.sh  tiago_sim_hospital_repositories.rosinstall
blender_ws/: door_120.blend  hanging_sink_notes.txt  medical_couch.blend  medicine_cup.blend  three_drawer_desk.blend  vitals_monitor.blend  wading_pool.blend
blender_ws/exported/: door_90.dae  info_plate.dae  medicine_cup.dae  three_drawer_desk.dae  vitals_monitor.dae  wading_pool.dae
blender_ws/unused/: door_90.blend  info_plate.blend
blender_ws/unused/exported/: door_120.dae
config/motions/: tiago_motions.yaml  tiago_motions_steel.yaml  tiago_motions_titanium.yaml
include/nodes/: ArmToMarkerNode.hpp  ArmToPoseNode.hpp  DriveToPointNode.hpp  PerformMotionNode.hpp
launch/: gazebo_test_door.launch  tiago_gazebo.launch  tiago_manipulation_hospital.launch  tiago_manipulation_hospital_v1.launch  tiago_mapping.launch  tiago_mapping_hospital.launch  tiago_mapping_hospital_v1.launch  tiago_navigation_hospital.launch  tiago_navigation_hospital_v1.launch  track_marker_test.launch
maps/hospital_sim_localization/: map_sim_localization.pgm
maps/hospital_sim_planning/: map_sim_planning.pgm
maps/v1/hospital_sim_mapping/: map_sim_mapping.pgm
maps/v1/hospital_sim_planning/: map.yaml
maps/v2/hospital_sim_localization/: map.yaml
maps/v2/hospital_sim_mapping/: map_sim_mapping.pgm
maps/v2/hospital_sim_planning/: map.yaml  map_sim_planning.pgm
maps/v2_actors/hospital_sim_localization/: map_sim_localization.pgm
maps/v2_actors/hospital_sim_mapping/: map.yaml
models/actors/: README  nurse.dae  pink.dae
models/bathtub/: model.config  model.sdf
models/door_120_left/: model.config
models/door_120_left/urdf/: door_120_left.urdf
models/door_120_right/: model.config
models/door_120_right/urdf/: door_120_right.urdf
models/door_90/: model.config  model.sdf
models/door_90/meshes/: test.dae
models/door_90_left/: model.config
models/door_90_left/urdf/: door_90_left.urdf
models/door_90_right/: model.config
models/door_90_right/urdf/: door_90_right.urdf
models/hanging_sink/: model.config  model.sdf
models/hospital_bed/: model.config  model.sdf
models/info_plate/: model.config  model.sdf
models/info_plate/materials/scripts/: info.material
models/marker_plate/: model.config  model.sdf
models/marker_plate/materials/scripts/: info.material
models/medical_couch/: model.config  model.sdf
models/medical_couch/meshes/: model.dae
models/medicine_cup/: model.config  model.sdf
models/medicine_cup/meshes/: model.dae
models/sink_with_cupboard/: model.config  model.sdf
models/three_drawer_desk/: model.config  model.sdf
models/three_drawer_desk/meshes/: model.dae
models/toilet/: model.config  model.sdf
models/vitals_monitor/: model.config  model.sdf
models/vitals_monitor/meshes/: model.dae
models/wading_pool/: model.config  model.sdf
models/wading_pool/meshes/: model.dae
src/: arm_follow_marker.cpp  scenario_1.cpp
src/nodes/: ArmToMarkerNode.cpp  ArmToPoseNode.cpp  DriveToPointNode.cpp  PerformMotionNode.cpp
urdf/: door.urdf  door.urdf.xacro  door_old.urdf.xacro
worlds/: hospital_v1.world  hospital_v2.world  hospital_v2_actor.world  hospital_v2_actors.world
