<package format="2">
  <name>tiago_sim_hospital</name>
  <version>0.1.1</version>
  <description>
    This package contains simulation for tiago robot in medical environment.
  </description>
  <maintainer email="dan.gield@gmail.com">Daniel Giełdowski</maintainer>
  <license>BSD</license>

  <author>Daniel Giełdowski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tiago_2dnav_gazebo</exec_depend>
  <exec_depend>tiago_sim_integration</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
